Adding new vault test for eap 72

--- a/configuration/dev.properties
+++ b/configuration/dev.properties
@@ -5,4 +5,7 @@ mydatabase=
 greeterdb=
 mysql_dbhostname=sql10.freemysqlhosting.net
 mysql_dbport=3306
-mysql_dbhost_enabled=true
+mysql_dbname=sql10312287
+mysql_dbusername=sql10312287
+mysql_dbhost_passwd=VAULT::vb::password::1
+mysqldb-enabled=true
