--- a/configuration/dev.properties
+++ b/configuration/dev.properties
@@ -9,3 +9,4 @@ mysql_dbname=sql10312287
 mysql_dbusername=sql10312287
 mysql_dbhost_passwd=VAULT::vb::password::1
 mysqldb-enabled=true
+newline=test
